# ImageProcessor

./: CMakeLists.txt  CmdArgs.cpp  CmdArgs.h  Color.cpp  Color.h  FilterApplier.cpp  FilterApplier.h  FilterFactory.cpp  FilterFactory.h  Image.cpp  Image.h  Serializer.cpp  Serializer.h  image_processor.cpp  readme.md
Filters/: Crop.cpp  Crop.h  EdgeDetection.cpp  EdgeDetection.h  GaussianBlur.cpp  GaussianBlur.h  Grayscale.cpp  Grayscale.h  IFilter.cpp  IFilter.h  Mirror.cpp  Mirror.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h
